fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,9 @@ a h2:hover {
     .project-image {
     	display: none;
     }
+    .social {
+    	display: none;
+    }
 }
 
 @media only screen and (min-width: 700px) {
